package academy.mindswap.game.commands;

import academy.mindswap.game.Game;

public class FreeplayHandler implements CommandHandler{
    @Override
    public void execute(Game game, Game.PlayerHandler playerHandler) {

    }
}
