/*
 * @(#)PlayerMessages.java        1.0 28/06/2021
 *
 * Copyright (c) MindSwap Academy - Manuela Dourado, Filipa Bastos & Diogo Velho
 * All rights reserved.
 *
 * This software was produced to become our first group project.
 */

package academy.mindswap.player_client;

/**
 * Messages sent to console by the player
 */
public final class PlayerMessages {
    public static final String NOT_VALID_HOST = "Not valid Args. Please choose a valid host";
    public static final String NOT_VALID_PORT = "Not valid Args. Please choose a valid port";
    public static final String NOT_CONNECT_SERVER = "It's not possible to connect to the server";
    public static final String SERVER_CLOSE = "Server Closed Connection";
    public static final String CLIENT_CLOSE_SOCKET = "Socket already closed";

}
